fixed footer alignment problem

--- a/main.css
+++ b/main.css
@@ -102,6 +102,12 @@ h2 {
   font-size: 17px;
   text-align: center;
 }
+/* .commentbut,.laterbut,.sharebut{
+  max-width: 154px;
+  max-height: 30px;
+  display: inline-block;
+  background: #A0B3C0; */
+}
 .socialbar {
   display: inline-block;
 }
@@ -251,31 +257,20 @@ h5 {
   color: white;
 }
 .footer {
-  position: absolute;
-  bottom: -391%;
+bottom: 0;
   width: 100%;
-  height: 97px;
   background: #003253;
 }
 .footercontent {
   max-width: 973px;
-  clear: right;
   margin: 0 auto;
-  position: relative;
   pointer-events: none;
   color: white;
+  background: #003253;
 }
-/* .tiytag, footer ul, footer li, {
+.footnav ul li {
+  float: right;
+  transform: translateY(-187%);
   display: inline-block;
-  vertical-align: middle;
-  display: inline-block;
+  background: #003253;
 }
-footer ul {
-  position: absolute;
-  right: 0;
-  top: 89%;
-}
-li {
-  display: inline-block;
-}
- */
